Added inheritance from a base template

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,2 +1,6 @@
-<h1>My Home</h1>
-<p>Home template</p>
+{% extends 'base.html' %}
+
+{% block content %}
+    <h1>My Home</h1>
+    <p>Home template</p>
+{% endblock %}
