Included "navbar" with django include keyward

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,8 @@
     <head>
         <title>My website</title>
     </head>
-    <body>
+    <body style="margin: 0px;">
+        {% include 'navbar.html' %}
         {% block content %}
         {% endblock %}
     </body>
